condense more lists

--- a/6/powers.yaml
+++ b/6/powers.yaml
@@ -2075,9 +2075,7 @@ links:
     power:
         title: power
         hooks: [fix_multiple]
-        extend:
-          - power_meta
-          - power_base
+        extend: [power_meta, power_base]
     custom_power:
         title: custom
         extend: [power_meta, custom_power_base]
@@ -2097,10 +2095,7 @@ links:
         nopanel: true
         or:
           - title: constant
-            enum:
-              - true
-              - false
-              - null
+            enum: [true, false, null]
           - type: number
           - type: string
           - type: list
