--- a/6/powers.yaml
+++ b/6/powers.yaml
@@ -166,11 +166,11 @@ links:
                         string-origins:collided_horizontally: {}
                         string-origins:command:
                             command:
-                                desc: Command to run.
+                                desc: Command to run as and at the entity evaluating this condition.
                                 type: string
                                 ext: true
                             comparison:
-                                desc: How to compare the command's result (all commands return 0 on failure and 1 or more on success. Some commands even return back the count of something.) to the specified value.
+                                desc: How to compare the command's result (all commands return 0 on failure and 1 or more on success. Some commands even return back the count/number of something) to the specified value.
                                 link: comparison
                             compare_to:
                                 desc: The value to compare to.
@@ -846,7 +846,7 @@ links:
                                 desc: The action which is executed when the condition evaluates to true.
                                 link: entity_action
                             else_action:
-                                desc: If present, this action will be executed when the condition evaluates to false.
+                                desc: If specified, this action will be executed when the condition evaluates to false.
                                 link: entity_action
                         string-origins:if_else_list:
                             actions:
@@ -1082,7 +1082,7 @@ links:
                                 desc: The action which is executed when the condition evaluates to true.
                                 link: item_action
                             else_action:
-                                desc: If present, this action will be executed when the condition evaluates to false.
+                                desc: If specified, this action will be executed when the condition evaluates to false.
                                 link: item_action
                         string-origins:if_else_list:
                             actions:
@@ -1157,7 +1157,7 @@ links:
                                 desc: The action which is executed when the condition evaluates to true.
                                 link: block_action
                             else_action:
-                                desc: If present, this action will be executed when the condition evaluates to false.
+                                desc: If specified, this action will be executed when the condition evaluates to false.
                                 link: block_action
                         string-origins:if_else_list:
                             actions:
@@ -1240,6 +1240,8 @@ links:
                 href: https://origins.readthedocs.io/en/0.7.3/power_types/
                 hooks: [fix_cond]
                 enum:
+                  - $Regular Types
+
                   - origins:attribute
                   - origins:burn
                   - origins:climbing
@@ -1277,6 +1279,9 @@ links:
                   - origins:toggle_night_vision
                   - origins:toggle
                   - origins:walk_on_fluid
+
+                  - $Action Types
+
                   - origins:action_on_block_break
                   - origins:action_on_callback
                   - origins:action_on_item_use
@@ -1289,6 +1294,9 @@ links:
                   - origins:self_action_on_kill
                   - origins:self_action_when_hit
                   - origins:target_action_on_hit
+
+                  - $Modify Types
+
                   - origins:modify_break_speed
                   - origins:modify_damage_dealt
                   - origins:modify_damage_taken
@@ -1301,6 +1309,9 @@ links:
                   - origins:modify_projectile_damage
                   - origins:modify_swim_speed
                   - origins:modify_xp_gain
+
+                  - $Prevent Types
+
                   - origins:prevent_block_selection
                   - origins:prevent_block_use
                   - origins:prevent_death
