--- a/7/powers.yaml
+++ b/7/powers.yaml
@@ -262,11 +262,11 @@ links:
                         string-origins:collided_horizontally: {}
                         string-origins:command:
                             command:
-                                desc: Command to run.
+                                desc: Command to run as and at the entity evaluating this condition.
                                 type: string
                                 ext: true
                             comparison:
-                                desc: How to compare the command's result (all commands return 0 on failure and 1 or more on success. Some commands even return back the count of something.) to the specified value.
+                                desc: How to compare the command's result (all commands return 0 on failure and 1 or more on success. Some commands even return back the count/number of something) to the specified value.
                                 link: comparison
                             compare_to:
                                 desc: The value to compare to.
@@ -1112,7 +1112,7 @@ links:
                                 desc: The action which is executed when the condition evaluates to true.
                                 link: entity_action
                             else_action:
-                                desc: If present, this action will be executed when the condition evaluates to false.
+                                desc: If specified, this action will be executed when the condition evaluates to false.
                                 link: entity_action
                         string-origins:if_else_list:
                             actions:
@@ -1447,7 +1447,7 @@ links:
                                 desc: The action which is executed when the condition evaluates to true.
                                 link: item_action
                             else_action:
-                                desc: If present, this action will be executed when the condition evaluates to false.
+                                desc: If specified, this action will be executed when the condition evaluates to false.
                                 link: item_action
                         string-origins:if_else_list:
                             actions:
@@ -1535,7 +1535,7 @@ links:
                                 desc: The action which is executed when the condition evaluates to true.
                                 link: block_action
                             else_action:
-                                desc: If present, this action will be executed when the condition evaluates to false.
+                                desc: If specified, this action will be executed when the condition evaluates to false.
                                 link: block_action
                         string-origins:if_else_list:
                             actions:
@@ -1625,6 +1625,8 @@ links:
                 href: https://origins.readthedocs.io/en/1.1.4/types/power_types/
                 hooks: [fix_cond]
                 enum:
+                  - $Regular Types
+
                   - origins:simple
                   - origins:attribute_modify_transfer
                   - origins:attribute
@@ -1670,6 +1672,9 @@ links:
                   - origins:toggle
                   - origins:tooltip
                   - origins:walk_on_fluid
+
+                  - $Action Types
+
                   - origins:action_on_being_used
                   - origins:action_on_block_break
                   - origins:action_on_callback
@@ -1687,6 +1692,9 @@ links:
                   - origins:self_action_on_kill
                   - origins:self_action_when_hit
                   - origins:target_action_on_hit
+
+                  - $Modify Types
+
                   - origins:modify_air_speed
                   - origins:modify_block_render
                   - origins:modify_break_speed
@@ -1705,6 +1713,9 @@ links:
                   - origins:modify_projectile_damage
                   - origins:modify_swim_speed
                   - origins:modify_xp_gain
+
+                  - $Prevent Types
+
                   - origins:prevent_being_used
                   - origins:prevent_block_selection
                   - origins:prevent_block_use
