--- a/10/powers.yaml
+++ b/10/powers.yaml
@@ -4205,6 +4205,7 @@ links:
             type: list
             vals:
                 link: slot
+hooks: [preserve_single]
 or:
   - title: simple
     link: power
