--- a/18/powers.yaml
+++ b/18/powers.yaml
@@ -4572,6 +4572,7 @@ links:
                 type: list
                 vals:
                     link: effect_chance
+hooks: [preserve_single]
 or:
   - title: simple
     link: power
