--- a/10/meta.yaml
+++ b/10/meta.yaml
@@ -43,18 +43,18 @@ props:
         desc: A short description of what your pack does, about one sentence long.
         ext: true
         gap: true
-    filter:
-        type: object
-        desc: |
-            Section for filtering out files from data packs applied below this one.
-            Any file that matches one of the patterns inside block will be treated as if it was not present in the pack at all.
-        props:
-            block:
-                type: list
-                vals:
-                    type: object
-                    props:
-                        namespace:
-                            type: string
-                        path:
-                            type: string
+    # filter:
+    #     type: object
+    #     desc: |
+    #         Section for filtering out files from data packs applied below this one.
+    #         Any file that matches one of the patterns inside block will be treated as if it was not present in the pack at all.
+    #     props:
+    #         block:
+    #             type: list
+    #             vals:
+    #                 type: object
+    #                 props:
+    #                     namespace:
+    #                         type: string
+    #                     path:
+    #                         type: string
