--- a/6/recipes.yaml
+++ b/6/recipes.yaml
@@ -148,7 +148,10 @@ links:
                                             type: string
                                             allow: '*a-z0-9_:-'
                             result:
-                                link: item
+                                type: object
+                                props:
+                                    item:
+                                        link: item
                         string-minecraft:stonecutting:
                             ingredient:
                                 link: oritem
