fix quick fast gogogo

--- a/15/recipes.yaml
+++ b/15/recipes.yaml
@@ -212,5 +212,6 @@ links:
                     type: string
                     gap: true
             extra:
+                id: powers-15
                 link: nany
 link: recipe
