--- a/15/recipes.yaml
+++ b/15/recipes.yaml
@@ -142,6 +142,7 @@ links:
                             result:
                                 type: object
                                 show: true
+                                showpanel: true
                                 props:
                                     item:
                                         link: item
