--- a/6/recipes.yaml
+++ b/6/recipes.yaml
@@ -141,6 +141,7 @@ links:
                             result:
                                 type: object
                                 show: true
+                                showpanel: true
                                 props:
                                     item:
                                         link: item
