--- a/6/recipes.yaml
+++ b/6/recipes.yaml
@@ -205,9 +205,8 @@ links:
             type: object
             props:
                 type:
-                    desc: The type of the recipe
+                    desc: The type of the recipe.
                     type: string
-                    gap: true
             extra:
                 id: powers-6
                 link: nany
