--- a/10/meta.yaml
+++ b/10/meta.yaml
@@ -33,6 +33,10 @@ props:
         max: 18
         hooks: [refresh]
         gap: true
+    version:
+        type: string
+        desc: The version number of your pack.
+        default: "1.0.0"
     authors:
         type: list
         desc: A list of people who made this pack, one name per line.
@@ -43,6 +47,17 @@ props:
         desc: A short description of what your pack does, about one sentence long.
         ext: true
         gap: true
+    license:
+        type: string
+        desc: |
+            The license your pack falls under. If left blank, defaults to "Unknown", which typically means "All Rights Reserved".
+            I recommend setting this to CC BY 4.0, which means anyone can use your pack for any purpose and make changes as they desire, as long as they give you credit.
+    license-text:
+        type: string
+        ext: true
+        desc: |
+            If you want to include a LICENSE file inside your mod, datapack, and resource pack, you can put it's content in this box.
+            Leaving this blank will not include a LICENSE file in the pack.
     # filter:
     #     type: object
     #     desc: |
